Fix leftmenu overflow bugs

--- a/frontend/src/pages/ProductListPage.css
+++ b/frontend/src/pages/ProductListPage.css
@@ -20,6 +20,7 @@
 .leftmenu__wrapper {
     position: sticky;
     top: 80px;
+    overflow: auto;
 }
 
 .leftmenu__header {
